# SPDX-License-Identifier: Apache-2.0

[package]
name = "tad"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-tz = "0.5"
color-eyre = "0.5.11"
dirs = "3.0.2"
eyre = "0.6.5"
serde = "1.0.126"
serde_json = "1.0.65"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1